[gd_scene load_steps=7 format=3 uid="uid://mownvchibqdk"]

[ext_resource type="Script" uid="uid://db7mcsgl305jj" path="res://scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Shader" uid="uid://cx1q61sgrtn88" path="res://shaders/scene_menu.gdshader" id="2_con2f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ouk20"]
shader = ExtResource("2_con2f")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_2ld4q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_y2fj4"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.879]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_44wrp"]
_data = {
&"RESET": SubResource("Animation_2ld4q"),
&"blur": SubResource("Animation_y2fj4")
}

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ouk20")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1567.0
offset_top = -1094.0
offset_right = -1567.0
offset_bottom = -1094.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.52025, 4.98202)

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 118.0
offset_top = -25.0
offset_right = 348.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.44953, 1.44953)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MainVBox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
text = "Settings"

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
text = "Restart"

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
text = "Exit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_44wrp")
}

[connection signal="pressed" from="PanelContainer/MarginContainer/MainVBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/MainVBox/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/MainVBox/ExitButton" to="." method="_on_exit_button_pressed"]
